fix(case-study-header): fix tags left spacing

--- a/src/css/components/case-study-header.scss
+++ b/src/css/components/case-study-header.scss
@@ -104,7 +104,7 @@
     @media only screen and (min-width: rem(1024)) {
       justify-content: flex-start;
 
-      margin-left: rem(122);
+      margin-left: rem(138);
       font-size: rem(36);
     }
   }
